--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang=“en”>
+<html lang="en">
 <head>
-    <meta charset=“UTF-8”>
-    <meta name=“viewport” content=“width=device-width, initial-scale=1.0”>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deuteronomy 27</title>
     <style>
         /* Dark Mode Styles */
         body {
             background-color: #121212;
             color: #ffffff;
-            font-family: ‘Arial’, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 20px;
         }
@@ -33,7 +33,7 @@
         .play-pause-btn {
             width: 50px;
             height: 50px;
-            background: url(‘play-icon.png’) center no-repeat;
+            background: url('play-icon.png') center no-repeat;
             background-size: contain;
             border: none;
             cursor: pointer;
@@ -41,7 +41,7 @@
         }
         
         .play-pause-btn.playing {
-            background: url(‘pause-icon.png’) center no-repeat;
+            background: url('pause-icon.png') center no-repeat;
             background-size: contain;
         }
         
@@ -69,27 +69,90 @@
     </style>
 </head>
 <body>
-    <div class=“audio-player”>
-        <audio controls id=“audio” preload=“metadata”>
-            <source src=“https://www.dropbox.com/scl/fi/b8jxpcutixove5fwvb74q/20240526_165901593.mp3?rlkey=jdljtwpxgqqvvyv3pflsrxdy1&amp;raw=1” type=“audio/mpeg”>
+    <div class="audio-player">
+        <audio controls id="audio" preload="metadata">
+            <source src="https://www.dropbox.com/scl/fi/b8jxpcutixove5fwvb74q/20240526_165901593.mp3?rlkey=jdljtwpxgqqvvyv3pflsrxdy1&amp;raw=1" type="audio/mpeg">
         </audio>
-        <div class=“controls”>
-            <button id=“play-pause-btn” class=“play-pause-btn”></button>
-            <div class=“progress-container”>
-                <div id=“progress” class=“progress”></div>
+        <div class="controls">
+            <button id="play-pause-btn" class="play-pause-btn"></button>
+            <div class="progress-container">
+                <div id="progress" class="progress"></div>
             </div>
         </div>
     </div>
 
-    <script>
-        const audio = document.getElementById(‘audio’);
-        const playPauseBtn = document.getElementById(‘play-pause-btn’);
-        const progressContainer = document.querySelector(‘.progress-container’);
-        const progress = document.getElementById(‘progress’);
-        const currentTimeEl = document.getElementById(‘current-time’);
-        const durationEl = document.getElementById(‘duration’);
+    <section>
+        <h1>1. Moses and the Elders Command the People</h1>
+        <p>Moses and the elders of Israel commanded the people: "Keep all these commands that I give you today."</p>
+       <div class="container">
+  <h1>Deuteronomy 27</h1>
+  <div class="content">
+    <p><strong>1. Moses and the Elders Command the People</strong></p>
+    <p>Moses and the elders of Israel commanded the people: "Keep all these commands that I give you today."</p>
+    <p><strong>2. Instructions for Setting Up Stones</strong></p>
+    <p>"When you have crossed the Jordan into the land the LORD your God is giving you, set up some large stones and coat them with plaster."</p>
+    <p><strong>3. Writing the Law</strong></p>
+    <p>Write on them all the words of this law when you have crossed over to enter the land the LORD your God is giving you, a land flowing with milk and honey, just as the LORD, the God of your fathers, promised you.</p>
+    <p><strong>4. Setting Up Stones on Mount Ebal</strong></p>
+    <p>And when you have crossed the Jordan, set up these stones on Mount Ebal, as I command you today, and coat them with plaster.</p>
+    <p><strong>5. Building the Altar</strong></p>
+    <p>Build there an altar to the LORD your God, an altar of stones. Do not use any iron tool upon them.</p>
+    <p><strong>6. Offering Sacrifices</strong></p>
+    <p>Build the altar of the LORD your God with fieldstones and offer burnt offerings on it to the LORD your God.</p>
+    <p><strong>7. Fellowship Offerings</strong></p>
+    <p>Sacrifice fellowship offerings there, eating them and rejoicing in the presence of the LORD your God.</p>
+    <p><strong>8. Clear Writing of the Law</strong></p>
+    <p>And you shall write very clearly all the words of this law on these stones you have set up."</p>
+    <p><strong>9. Moses and the Priests Speak</strong></p>
+    <p>Then Moses and the priests, who are Levites, said to all Israel, "Be silent, O Israel, and listen! You have now become the people of the LORD your God."</p>
+    <p><strong>10. Obedience to God's Commands</strong></p>
+    <p>Obey the LORD your God and follow his commands and decrees that I give you today."</p>
+    <p><strong>11. Moses Commands the People</strong></p>
+    <p>On the same day Moses commanded the people:</p>
+    <p><strong>12. Mount Gerizim and Mount Ebal</strong></p>
+    <p>"When you have crossed the Jordan, these tribes shall stand on Mount Gerizim to bless the people: Simeon, Levi, Judah, Issachar, Joseph, and Benjamin."</p>
+    <p><strong>13. Pronouncing Curses</strong></p>
+    <p>And these tribes shall stand on Mount Ebal to pronounce curses: Reuben, Gad, Asher, Zebulun, Dan, and Naphtali.</p>
+    <p><strong>14. Levites' Recitation</strong></p>
+    <p>The Levites shall recite to all the people of Israel in a loud voice:</p>
+    <p><strong>15. Curses for Idolatry</strong></p>
+    <p>"Cursed is the man who carves an image or casts an idol--a thing detestable to the LORD, the work of the craftsman's hands--and sets it up in secret." Then all the people shall say, "Amen!"</p>
+    <p><strong>16. Curses for Dishonoring Parents</strong></p>
+    <p>"Cursed is the man who dishonors his father or his mother." Then all the people shall say, "Amen!"</p>
+    <p><strong>17. Curses for Moving Boundary Stones</strong></p>
+    <p>"Cursed is the man who moves his neighbor's boundary stone." Then all the people shall say, "Amen!"</p>
+    <p><strong>18. Curses for Leading the Blind Astray</strong></p>
+    <p>"Cursed is the man who leads the blind astray on the road." Then all the people shall say, "Amen!"</p>
+    <p><strong>19. Curses for Withholding Justice</strong></p>
+    <p>"Cursed is the man who withholds justice from the alien, the fatherless, or the widow." Then all the people shall say, "Amen!"</p>
+    <p><strong>20. Curses for Sexual Immorality</strong></p>
+    <p>"Cursed is the man who sleeps with his father's wife, for he dishonors his father's bed." Then all the people shall say, "Amen!"</p>
+    <p><strong>21. Curses for Bestiality</strong></p>
+    <p>"Cursed is the man who has sexual relations with any animal." Then all the people shall say, "Amen!"</p>
+    <p><strong>22. Curses for Incest</strong></p>
+    <p>"Cursed is the man who sleeps with his sister, the daughter of his father, or the daughter of his mother." Then all the people shall say, "Amen!"</p>
+    <p><strong>23. Curses for Sleeping with Mother-in-law</strong></p>
+    <p>"Cursed is the man who sleeps with his mother-in-law." Then all the people shall say, "Amen!"</p>
+    <p><strong>24. Curses for Secret Murder</strong></p>
+    <p>"Cursed is the man who kills his neighbor secretly." Then all the people shall say, "Amen!"</p>
+    <p><strong>25. Curses for Bribery to Kill</strong></p>
+    <p>"Cursed is the man who accepts a bribe to kill an innocent person." Then all the people shall say, "Amen!"</p>
+    <p><strong>26. Curses for Not Upholding the Law</strong></p>
+    <p>"Cursed is the man who does not uphold the words of this law by carrying them out." Then all the people shall say, "Amen!"</p>
+    <p><em>Traditionally peace offerings</em></p>
+  </div>
+</div>
+    </section>
 
-        playPauseBtn.addEventListener(‘click’, () => {
+    <script>
+        const audio = document.getElementById('audio');
+        const playPauseBtn = document.getElementById('play-pause-btn');
+        const progressContainer = document.querySelector('.progress-container');
+        const progress = document.getElementById('progress');
+        const currentTimeEl = document.getElementById('current-time');
+        const durationEl = document.getElementById('duration');
+
+        playPauseBtn.addEventListener('click', () => {
             if (audio.paused) {
                 audio.play();
             } else {
@@ -97,15 +160,15 @@
             }
         });
 
-        audio.addEventListener(‘play’, () => {
-            playPauseBtn.classList.add(‘playing’);
+        audio.addEventListener('play', () => {
+            playPauseBtn.classList.add('playing');
         });
 
-        audio.addEventListener(‘pause’, () => {
-            playPauseBtn.classList.remove(‘playing’);
+        audio.addEventListener('pause', () => {
+            playPauseBtn.classList.remove('playing');
         });
 
-        audio.addEventListener(‘timeupdate’, () => {
+        audio.addEventListener('timeupdate', () => {
             const {
                 currentTime,
                 duration
@@ -117,7 +180,7 @@
             durationEl.textContent = formatTime(duration);
         });
 
-        progressContainer.addEventListener(‘click’, (e) => {
+        progressContainer.addEventListener('click', (e) => {
             const width = progressContainer.clientWidth;
             const clickX = e.offsetX;
             const duration = audio.duration;
@@ -128,19 +191,13 @@
         function formatTime(time) {
             const minutes = Math.floor(time / 60);
             const seconds = Math.floor(time % 60);
-            return `${minutes}:${seconds < 10 ? ‘0’ : ‘’}${seconds}`;
+            return `${minutes}:${seconds < 10 ? '0' : ''}${seconds}`;
         }
 
         // Load metadata to display duration correctly
-        audio.addEventListener(‘loadedmetadata’, () => {
+        audio.addEventListener('loadedmetadata', () => {
             durationEl.textContent = formatTime(audio.duration);
         });
     </script>
-
-    <section>
-        <h1>1. Moses and the Elders Command the People</h1>
-        <p>Moses and the elders of Israel commanded the people: “Keep all these commands that I give you today.”</p>
-        <!— Additional verses truncated for brevity —>
-    </section>
 </body>
 </html>
